@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX 1.08-help-option.patch 360 RMD160 2e8addce02be99e57d1b9cb0931f5fc8383cc9e7 SHA1 bfbf591faee8dd8c235119739f9f6ee29c64ceac SHA256 246cf965102e548403cb115c85079132b7a3c71c2536718d783143dfc61ce580
 DIST lcdtest-1.08.tar.gz 30762 RMD160 bad9b9a8e8f5138f043812fff397db6cde54e160 SHA1 9ad88e26fc2273e4f75d977b64422f8624fe0b3c SHA256 f4cc00b90505ccc2f379d0f481a761ca11f7622abbb078430b595cf3aa287d29
-EBUILD lcdtest-1.08-r1.ebuild 1726 RMD160 b1c9da01c673d064123362def1e8e96f8de641ab SHA1 33bec47153e286d36822572aea635970e6a89c94 SHA256 802663be38315b844fec47b1efa2e85dc8b629bf24a1ec0b9e825403f5e677d7
-MISC ChangeLog 3174 RMD160 c2f581a8f88a053980af6061f6341587e07bbd7a SHA1 a2dc283bf56b333fb30f75c23f7ea6cc31ce6d8f SHA256 85766903b607672a8d47438e46ded6508d94edf97c9472c57980436d1c6157a4
+EBUILD lcdtest-1.08-r1.ebuild 1751 RMD160 6c3ac34ba4314b344ebedc419772cf0e71aca14b SHA1 c08d35155074bbdb3b4e1dbdf9b5ec7b62479ec0 SHA256 c76c1e766694b084ad97da008403f1ca56b5391d92d4419f4c9e20c89f2d83fd
+MISC ChangeLog 3405 RMD160 5296a685b7c403a2b127c528b192a9a8fc980363 SHA1 02e24ce99329549cf722ad018640ce56f3e9105d SHA256 042958909b09095ad163ae6b52fe190c05a3845d0205d3661fb0af70f031ffbc
 MISC metadata.xml 254 RMD160 823c99a514af57fe285c45f08538b7cc18e6342a SHA1 de5f6d0faac7d5f11daa399f9e875c30cac2ce64 SHA256 2817a53a07dd68fef8ec5467cb1a8441e87d77bd7eaf8ce9971de1adfbab7bdc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkscTNQACgkQp5vW4rUFj5qQhwCfRiTcjVCB4jj421tvrV0EdoKL
-DBQAmQHmc7QFfjJgfWPVIIdvWnk6Qf4D
-=aDsi
+iEYEARECAAYFAksjoa4ACgkQp5vW4rUFj5ohJQCfcXCLy1a180OVk/ccUKRBv0o1
+xzcAn3v88P6UsGGJZDGnbxiYHk07sx6U
+=5M21
 -----END PGP SIGNATURE-----
