@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/lcdtest-1.08-r1.ebuild,v 1.8 2009/12/07 00:30:55 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/lcdtest-1.08-r1.ebuild,v 1.9 2009/12/12 13:58:37 chainsaw Exp $
 
 inherit eutils toolchain-funcs
 
@@ -26,17 +26,18 @@ src_unpack() {
 src_compile() {
 	tc-export CC CXX
 	cd "${S}/src"
+	einfo "Generating font"
+	pngtopnm 14P_Arial_Plain_Red.png > help_font.ppm || die pngtopnm failed
+	ppmtoxpm -name `basename help_font.ppm .ppm`_xpm help_font.ppm 2>/dev/null |
+	sed 's/static //;s/black/#000000/;s/magenta/#FF00FF/;s/#E40808/#009900/' > help_font.c || ppmtoxpm or sed failed
+	eend $?
 	ebegin "Running first stage compilation"
 	"${CC}" -o lcdtest.o -c ${CFLAGS} -DRELEASE=${PV} lcdtest.c || die lcdtest compilation failed
 	"${CC}" -o SFont.o -c ${CFLAGS} -DRELEASE=${PV} SFont.c || die SFont compilation failed
 	eend $?
-	einfo "Generating font"
-	pngtopnm 14P_Arial_Plain_Red.png > help_font.ppm || die pngtopnm failed
-	ppmtoxpm -name `basename help_font.ppm .ppm`_xpm help_font.ppm || die ppmtoxpm failed
-	sed 's/static //;s/black/#000000/;s/magenta/#FF00FF/;s/#E40808/#009900/' > help_font.c || sed failed
 	ebegin "Running final stage compilation"
 	"${CC}" -o help_font.o -c ${CFLAGS} -DRELEASE=${PV} help_font.c || die help_font compilation failed
-	"${CC}" -o lcdtest lcdtest.o SFont.o help_font.o -lSDL -lSDL_image || die final link failed
+	"${CC}" "${LDFLAGS}" -o lcdtest lcdtest.o SFont.o help_font.o -lSDL -lSDL_image || die final link failed
 	eend $?
 }
 
