@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/lcdtest
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.16 2009/12/07 00:30:55 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lcdtest/Attic/ChangeLog,v 1.17 2009/12/12 13:58:37 chainsaw Exp $
+
+  12 Dec 2009; <chainsaw@gentoo.org> lcdtest-1.08-r1.ebuild:
+  Reorder build sequence, improve visual feedback of build process. Respect
+  LDFLAGS. Address inadvertent build breakage reported by Andrew Savchenko
+  in bug #296556.
 
   07 Dec 2009; <chainsaw@gentoo.org> lcdtest-1.08-r1.ebuild:
   QA audit as requested by Tomáš "scarabeus" Chvátal on #gentoo-dev;
